Fix services cta image stretching.

--- a/assets/src/styles/partial/_services-cta.scss
+++ b/assets/src/styles/partial/_services-cta.scss
@@ -64,12 +64,12 @@
 				font-size: 19px;
 				display: flex;
 				flex-direction: row;
+				align-items: center;
 				background-color: $header-active-nav;
 				padding: 15px 30px;
 				margin-top: 15px;
 				clip-path: polygon(0 0,100% 0,95% 100%,0 100%);
 				text-transform: uppercase;
-				max-width: 370px;
 				width: 100%;
 
 				img{
